sandbox/mpi/fp_mpi.pas

function PMPI_Comm_group(comm:TMPI_Comm; group:PMPI_Group):longint;cdecl;external libhdf5;
function PMPI_Comm_join(fd:longint; intercomm:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Comm_rank(comm:TMPI_Comm; rank:Plongint):longint;cdecl;external libhdf5;
function PMPI_Comm_remote_group(comm:TMPI_Comm; group:PMPI_Group):longint;cdecl;external libhdf5;
function PMPI_Comm_remote_size(comm:TMPI_Comm; size:Plongint):longint;cdecl;external libhdf5;
function PMPI_Comm_set_attr(comm:TMPI_Comm; comm_keyval:longint; attribute_val:pointer):longint;cdecl;external libhdf5;
function PMPI_Comm_set_errhandler(comm:TMPI_Comm; errhandler:TMPI_Errhandler):longint;cdecl;external libhdf5;
function PMPI_Comm_set_info(comm:TMPI_Comm; info:TMPI_Info):longint;cdecl;external libhdf5;
function PMPI_Comm_set_name(comm:TMPI_Comm; comm_name:Pchar):longint;cdecl;external libhdf5;
function PMPI_Comm_size(comm:TMPI_Comm; size:Plongint):longint;cdecl;external libhdf5;
function PMPI_Comm_spawn(command:Pchar; argv:PPchar; maxprocs:longint; info:TMPI_Info; root:longint; 
           comm:TMPI_Comm; intercomm:PMPI_Comm; array_of_errcodes:Plongint):longint;cdecl;external libhdf5;
function PMPI_Comm_spawn_multiple(count:longint; array_of_commands:PPchar; array_of_argv:PPPchar; array_of_maxprocs:Plongint; array_of_info:PMPI_Info; 
           root:longint; comm:TMPI_Comm; intercomm:PMPI_Comm; array_of_errcodes:Plongint):longint;cdecl;external libhdf5;
function PMPI_Comm_split(comm:TMPI_Comm; color:longint; key:longint; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Comm_split_type(comm:TMPI_Comm; split_type:longint; key:longint; info:TMPI_Info; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Comm_test_inter(comm:TMPI_Comm; flag:Plongint):longint;cdecl;external libhdf5;
function PMPI_Compare_and_swap(origin_addr:pointer; compare_addr:pointer; result_addr:pointer; datatype:TMPI_Datatype; target_rank:longint; 
           target_disp:TMPI_Aint; win:TMPI_Win):longint;cdecl;external libhdf5;
function PMPI_Dims_create(nnodes:longint; ndims:longint; dims:Plongint):longint;cdecl;external libhdf5;
function PMPI_Errhandler_c2f(errhandler:TMPI_Errhandler):TMPI_Fint;cdecl;external libhdf5;
function PMPI_Errhandler_f2c(errhandler:TMPI_Fint):TMPI_Errhandler;cdecl;external libhdf5;
function PMPI_Errhandler_free(errhandler:PMPI_Errhandler):longint;cdecl;external libhdf5;
function PMPI_Error_class(errorcode:longint; errorclass:Plongint):longint;cdecl;external libhdf5;
function PMPI_Error_string(errorcode:longint; _string:Pchar; resultlen:Plongint):longint;cdecl;external libhdf5;
function PMPI_Exscan(sendbuf:pointer; recvbuf:pointer; count:longint; datatype:TMPI_Datatype; op:TMPI_Op; 
           comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Fetch_and_op(origin_addr:pointer; result_addr:pointer; datatype:TMPI_Datatype; target_rank:longint; target_disp:TMPI_Aint; 
           op:TMPI_Op; win:TMPI_Win):longint;cdecl;external libhdf5;
function PMPI_Iexscan(sendbuf:pointer; recvbuf:pointer; count:longint; datatype:TMPI_Datatype; op:TMPI_Op; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_File_c2f(file:TMPI_File):TMPI_Fint;cdecl;external libhdf5;
function PMPI_File_f2c(file:TMPI_Fint):TMPI_File;cdecl;external libhdf5;
function PMPI_File_call_errhandler(fh:TMPI_File; errorcode:longint):longint;cdecl;external libhdf5;
function PMPI_File_create_errhandler(_function:PMPI_File_errhandler_function; errhandler:PMPI_Errhandler):longint;cdecl;external libhdf5;
function PMPI_File_set_errhandler(file:TMPI_File; errhandler:TMPI_Errhandler):longint;cdecl;external libhdf5;
function PMPI_File_get_errhandler(file:TMPI_File; errhandler:PMPI_Errhandler):longint;cdecl;external libhdf5;
function PMPI_File_open(comm:TMPI_Comm; filename:Pchar; amode:longint; info:TMPI_Info; fh:PMPI_File):longint;cdecl;external libhdf5;
function PMPI_File_close(fh:PMPI_File):longint;cdecl;external libhdf5;
function PMPI_File_delete(filename:Pchar; info:TMPI_Info):longint;cdecl;external libhdf5;
function PMPI_File_set_size(fh:TMPI_File; size:TMPI_Offset):longint;cdecl;external libhdf5;
function PMPI_File_preallocate(fh:TMPI_File; size:TMPI_Offset):longint;cdecl;external libhdf5;
function PMPI_File_get_size(fh:TMPI_File; size:PMPI_Offset):longint;cdecl;external libhdf5;
function PMPI_File_get_group(fh:TMPI_File; group:PMPI_Group):longint;cdecl;external libhdf5;
function PMPI_File_get_amode(fh:TMPI_File; amode:Plongint):longint;cdecl;external libhdf5;
function PMPI_File_set_info(fh:TMPI_File; info:TMPI_Info):longint;cdecl;external libhdf5;
function PMPI_File_get_info(fh:TMPI_File; info_used:PMPI_Info):longint;cdecl;external libhdf5;
function PMPI_File_set_view(fh:TMPI_File; disp:TMPI_Offset; etype:TMPI_Datatype; filetype:TMPI_Datatype; datarep:Pchar; 
           info:TMPI_Info):longint;cdecl;external libhdf5;
function PMPI_File_get_view(fh:TMPI_File; disp:PMPI_Offset; etype:PMPI_Datatype; filetype:PMPI_Datatype; datarep:Pchar):longint;cdecl;external libhdf5;
function PMPI_File_read_at(fh:TMPI_File; offset:TMPI_Offset; buf:pointer; count:longint; datatype:TMPI_Datatype; 
           status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_read_at_all(fh:TMPI_File; offset:TMPI_Offset; buf:pointer; count:longint; datatype:TMPI_Datatype; 
           status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_write_at(fh:TMPI_File; offset:TMPI_Offset; buf:pointer; count:longint; datatype:TMPI_Datatype; 
           status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_write_at_all(fh:TMPI_File; offset:TMPI_Offset; buf:pointer; count:longint; datatype:TMPI_Datatype; 
           status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_iread_at(fh:TMPI_File; offset:TMPI_Offset; buf:pointer; count:longint; datatype:TMPI_Datatype; 
           request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_File_iwrite_at(fh:TMPI_File; offset:TMPI_Offset; buf:pointer; count:longint; datatype:TMPI_Datatype; 
           request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_File_iread_at_all(fh:TMPI_File; offset:TMPI_Offset; buf:pointer; count:longint; datatype:TMPI_Datatype; 
           request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_File_iwrite_at_all(fh:TMPI_File; offset:TMPI_Offset; buf:pointer; count:longint; datatype:TMPI_Datatype; 
           request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_File_read(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_read_all(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_write(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_write_all(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_iread(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_File_iwrite(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_File_iread_all(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_File_iwrite_all(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_File_seek(fh:TMPI_File; offset:TMPI_Offset; whence:longint):longint;cdecl;external libhdf5;
function PMPI_File_get_position(fh:TMPI_File; offset:PMPI_Offset):longint;cdecl;external libhdf5;
function PMPI_File_get_byte_offset(fh:TMPI_File; offset:TMPI_Offset; disp:PMPI_Offset):longint;cdecl;external libhdf5;
function PMPI_File_read_shared(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_write_shared(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_iread_shared(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_File_iwrite_shared(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_File_read_ordered(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_write_ordered(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_seek_shared(fh:TMPI_File; offset:TMPI_Offset; whence:longint):longint;cdecl;external libhdf5;
function PMPI_File_get_position_shared(fh:TMPI_File; offset:PMPI_Offset):longint;cdecl;external libhdf5;
function PMPI_File_read_at_all_begin(fh:TMPI_File; offset:TMPI_Offset; buf:pointer; count:longint; datatype:TMPI_Datatype):longint;cdecl;external libhdf5;
function PMPI_File_read_at_all_end(fh:TMPI_File; buf:pointer; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_write_at_all_begin(fh:TMPI_File; offset:TMPI_Offset; buf:pointer; count:longint; datatype:TMPI_Datatype):longint;cdecl;external libhdf5;
function PMPI_File_write_at_all_end(fh:TMPI_File; buf:pointer; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_read_all_begin(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype):longint;cdecl;external libhdf5;
function PMPI_File_read_all_end(fh:TMPI_File; buf:pointer; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_write_all_begin(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype):longint;cdecl;external libhdf5;
function PMPI_File_write_all_end(fh:TMPI_File; buf:pointer; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_read_ordered_begin(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype):longint;cdecl;external libhdf5;
function PMPI_File_read_ordered_end(fh:TMPI_File; buf:pointer; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_write_ordered_begin(fh:TMPI_File; buf:pointer; count:longint; datatype:TMPI_Datatype):longint;cdecl;external libhdf5;
function PMPI_File_write_ordered_end(fh:TMPI_File; buf:pointer; status:PMPI_Status):longint;cdecl;external libhdf5;
function PMPI_File_get_type_extent(fh:TMPI_File; datatype:TMPI_Datatype; extent:PMPI_Aint):longint;cdecl;external libhdf5;
function PMPI_File_set_atomicity(fh:TMPI_File; flag:longint):longint;cdecl;external libhdf5;
function PMPI_File_get_atomicity(fh:TMPI_File; flag:Plongint):longint;cdecl;external libhdf5;
function PMPI_File_sync(fh:TMPI_File):longint;cdecl;external libhdf5;
function PMPI_Finalize:longint;cdecl;external libhdf5;
function PMPI_Finalized(flag:Plongint):longint;cdecl;external libhdf5;
function PMPI_Free_mem(base:pointer):longint;cdecl;external libhdf5;
function PMPI_Gather(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; root:longint; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Igather(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; root:longint; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Gatherv(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcounts:Plongint; 
           displs:Plongint; recvtype:TMPI_Datatype; root:longint; comm:TMPI_Comm):longint;cdecl;external libhdf5;
